[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/arial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tagGame/player2.gd" type="Script" id=2]
[ext_resource path="res://tagGame/player.gd" type="Script" id=3]
[ext_resource path="res://tagGame/World.gd" type="Script" id=4]
[ext_resource path="res://tagGame/blue-square-texture-background.jpg" type="Texture" id=5]
[ext_resource path="res://tagGame/Tileset.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.2065, 30.8921 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.3282, 36.9235 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.0386, 31.3751 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 33.258, 29.0503 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32.6582, 30.9666 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 33.1736, 37.8435 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 1 )

[node name="World" type="Node2D"]
script = ExtResource( 4 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 111.86, 339.118 )
scale = Vector2( 0.998127, 0.876404 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( 1.25832, 1.12845 )
scale = Vector2( 0.288299, 0.303804 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2Dplayer" type="Area2D" parent="player"]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2Dplayer"]
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="player2" type="KinematicBody2D" parent="."]
position = Vector2( 900, 315 )
scale = Vector2( 1.00407, 1.12951 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="player2"]
position = Vector2( -0.48659, 4.02932 )
scale = Vector2( 0.112535, 0.144256 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="player2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player2/Area2D"]
position = Vector2( 0, 2.98126 )
scale = Vector2( 0.992677, 1.00383 )
shape = SubResource( 4 )

[node name="wall" type="KinematicBody2D" parent="."]
position = Vector2( 300, -50 )
scale = Vector2( -22.8596, 1.42887 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="wall"]
texture = ExtResource( 7 )

[node name="Area2Dwall" type="Area2D" parent="wall"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall/Area2Dwall"]
shape = SubResource( 6 )

[node name="wall2" type="KinematicBody2D" parent="."]
position = Vector2( 1060, -50 )
scale = Vector2( 0.96249, 20.0794 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="wall2"]
texture = ExtResource( 7 )

[node name="Area2Dwall" type="Area2D" parent="wall2"]
scale = Vector2( 0.98963, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2/Area2Dwall"]
shape = SubResource( 6 )

[node name="wall3" type="KinematicBody2D" parent="."]
position = Vector2( 450, 655 )
scale = Vector2( -20.2085, 1.36801 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall3"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="wall3"]
texture = ExtResource( 7 )

[node name="Area2Dwall" type="Area2D" parent="wall3"]
scale = Vector2( 0.98963, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall3/Area2Dwall"]
shape = SubResource( 6 )

[node name="wall4" type="KinematicBody2D" parent="."]
position = Vector2( -50, 655 )
scale = Vector2( -1.37226, 35.839 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall4"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="wall4"]
texture = ExtResource( 7 )

[node name="Area2Dwall" type="Area2D" parent="wall4"]
scale = Vector2( 0.98963, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall4/Area2Dwall"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="time" type="Label" parent="."]
margin_left = 306.87
margin_top = 42.4264
margin_right = 719.87
margin_bottom = 186.426
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameDone" type="ConfirmationDialog" parent="."]
margin_left = 413.721
margin_top = 221.997
margin_right = 613.721
margin_bottom = 291.997
window_title = "Do you wish to restart?"
dialog_text = "Chasee Wins!"

[node name="gameOver" type="ConfirmationDialog" parent="."]
pause_mode = 2
margin_left = 413.8
margin_top = 200.226
margin_right = 613.8
margin_bottom = 270.226
window_title = "Do you wish to play again?"
dialog_text = "Chaser wins!"
[connection signal="area_entered" from="player2/Area2D" to="player2" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="player2/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="player2/Area2D" to="player2" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="confirmed" from="gameDone" to="." method="_on_gameDone_confirmed"]
[connection signal="confirmed" from="gameOver" to="." method="_on_gameOver_confirmed"]
